--- a/assets/css/mymc.css
+++ b/assets/css/mymc.css
@@ -343,6 +343,15 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #fff;
   font-size: 15px;
 }
+.staff-role {  
+  background: rgba(0,0,0,.3);  
+  height: 50px;
+  padding: 15px 10px;  
+  min-width: 100%;
+}
+.staff-role span {  
+  color: #fff;  
+  font-size: 15px;}
 .carousel-inner > .item > iframe{
   display: block;
   max-width: 100%;
